Fix bad overflow

--- a/src/frontpage/Socials.css
+++ b/src/frontpage/Socials.css
@@ -1,16 +1,21 @@
-.headshot {
-  pointer-events: none;
-  border: 5px solid black;
-  border-radius:50%;
-  margin:auto;
-}
 
 .socialsContainer {
     display:flex;
     flex-direction:row;
     justify-content: flex-end;
-    width:50%;
+    flex-wrap:wrap;
+    width:75%;
     margin:auto;
+}
+
+.headshot {
+  pointer-events: none;
+  border: 5px solid black;
+  border-radius:50%;
+  margin:auto;
+  max-width:100%;
+  max-height:100%;
+  float:left;
 }
 
 
@@ -20,6 +25,7 @@
     /*margin-top:auto;*/
     /*margin-bottom:auto;*/
     margin:auto;
+    float:left;
 }
 
 .socialIcon {
